adding html and css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors Game</title>
+
+    <link rel="stylesheet" href="style.css" />
+
+    <script defer src="script.js"></script>
   </head>
   <body>
     <script type="module" src="/main.js"></script>
+
+    <div class="container">
+      <h1>Rock Paper Scissors Game</h1>
+
+      <h3>First who reaches score of three wins the game!</h3>
+
+      <div class="player-cont">
+        <p>Player Score: <span class="player-score">0</span></p>
+        <p>Computer Score: <span class="computer-score">0</span></p>
+      </div>
+
+      <div class="img-container">
+        <img class="rock-pic" src="/rock.png" alt="rock image" />
+        <img class="paper-pic" src="/paper.png" alt="Paper image" />
+        <img class="scissors" src="/scissors.png" alt="scissors image" />
+      </div>
+    </div>
   </body>
 </html>
