adding start functionality and overlay

--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
         <img class="scissors" src="/scissors.png" alt="scissors image" />
       </div>
     </div>
+
+    <button class="start-btn">START GAME</button>
+
+    <div class="overlay"></div>
   </body>
 </html>
