--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
       <h3 class="text">First who reaches score of three wins the game!</h3>
 
+      <h3 class="text-1">&nbsp;&nbsp;&nbsp;</h3>
+
       <div class="player-cont">
         <p>Player Score: <span class="player-score">0</span></p>
         <p>Computer Score: <span class="computer-score">0</span></p>
