--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <h3 class="text">First who reaches score of three wins the game!</h3>
 
-      <h3 class="text-1">&nbsp;&nbsp;&nbsp;</h3>
+      <h3 class="text-1">&nbsp;</h3>
 
       <div class="player-cont">
         <p>Player Score: <span class="player-score">0</span></p>
